--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -21,7 +21,7 @@ development:
   database: decomposite_development
   pool: 5
   username: decomposite
-  password: 4jfnc82
+  password:
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -34,7 +34,7 @@ test:
   database: decomposite_test
   pool: 5
   username: decomposite
-  password: 4jfnc82
+  password:
   socket: /var/run/mysqld/mysqld.sock
 
 production:
